fix: no flickering on the avatar images

--- a/styles.css
+++ b/styles.css
@@ -66,9 +66,20 @@ label {
     color: #2d1e3e;
 }
 
-.pop-over-img {
+.img-container {
+    position: relative;
     max-width: 290px;
-    background-size: 100% 100%;
+    border-radius: 90px;
+    overflow: hidden;
+    margin: 5px;
+}
+
+.pop-over-img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .start-button {
@@ -127,9 +138,9 @@ label {
         padding-left: 20px;
     }
 
-    .pop-over-img {
+    .img-container {
         width: -webkit-fill-available;
-        border-radius: 90px;
+        aspect-ratio: 1;
         display: flex;
     }
 
@@ -143,10 +154,6 @@ label {
 
     #padding-right-box {
         padding-right: 20px;
-    }
-
-    .img_background {
-        width: -webkit-fill-available;
     }
 
     .menuPadding {
@@ -179,10 +186,9 @@ label {
         height: 100%;
     }
 
-    .pop-over-img {
+    .img-container {
         width: 300px;
         height: 300px;
-        border-radius: 90px;
         display: flex;
     }
 
